# iqalab

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  blocking_mask_tool.cpp  blur_mse_info.cpp  dithering_removal.cpp  impulse_mask_tool.cpp  impulse_removal.cpp  jpeg_block_scan.cpp  lab_shift_demo.cpp  mse_info.cpp  regions_demo.cpp
include/iqalab/: blur.hpp  color.hpp  color_shift.hpp  debug.hpp  dithering.hpp  halo.hpp  image_type.hpp  impulse.hpp  iqalab.hpp  math_utils.hpp  mse.hpp  region_blocks.hpp  region_masks.hpp  region_provider.hpp  visualize_regions.hpp
include/iqalab/utils/: file_grouping.hpp  mask_utils.hpp  path_utils.hpp
src/: CMakeLists.txt  blocking.cpp  blur.cpp  color.cpp  color_shift.cpp  dithering.cpp  flat_blocking.cpp  halo.cpp  image_type.cpp  impulse.cpp  iqalab.cpp  math_utils.cpp  mse.cpp  region_blocks.cpp  region_masks.cpp  region_provider.cpp  visualize_regions.cpp
src/utils/: file_grouping.cpp  mask_utils.cpp  path_utils.cpp
test/: CMakeLists.txt  tid_impulse.cpp
